Sun Mar 16 05:09:55 1997  Jim Blandy  <jimb@totoro.cyclic.com>

	* Fix shell syntax error; some shells won't tolerate 
	multiple "fi" statements on a single line.  (Thanks to Fred Fish.)

Sat Mar 15 01:11:40 1997  Gary Houston  <ghouston@actrix.gen.nz>

	* posix.c (scm_uname): throw an error if uname fails instead
	of returning errno.

	* error.h (scm_errno, scm_perror): obsolete prototypes removed.

	* error.c (err_head, scm_errno, scm_perror): obsolete procedures
	removed.

	* async.c (scm_ints_disabled): definition moved from error.c.

Sat Mar 15 00:06:08 1997  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* acconfig.h: Removed PACKAGE.

	* scmconfig.h.in: Regenerated.

	* snarf.h: g++ says it's non-portable not to specify the first
 	argument in a varargs declaration.  I introduced the first
 	argument by using preprocessor conditionals.

Thu Mar 13 21:28:25 1997  Gary Houston  <ghouston@actrix.gen.nz>

	* ioext.c (scm_read_delimited_x): use RO string macros for delims.
	(scm_freopen): use RO string macros for filename and modes.
	(scm_duplicate_port, scm_fdopen): use RO string macros for modes.

	* posix.c (scm_getgrgid): simplify conversion of name to C string.
	(scm_mknod): use RO string macros for path.

	* socket.c (scm_fill_sockaddr, scm_send, scm_sendto):
	use SCM_ROSTRINGP, SCM_ROCHARS, SCM_ROLENGTH.
	
	* net_db.c (scm_gethost, scm_getnet, scm_getproto, scm_getserv):
	use SCM_ROSTRINGP and SCM_ROCHARS.

Thu Mar 13 18:31:33 1997  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* unif.c (scm_array_set_x): Cast ICHR (obj) to char if storing in
	a scm_tc7_byvect.

	* ramap.c (scm_ra_matchp, scm_ra_matchp, scm_array_fill_int, racp,
 	scm_array_index_map_x, raeql_1, scm_array_equal_p): Completed
 	support for byte vectors.

	* print.c (scm_iprin1): Limit number of vector elements printed
	according to pstate->length.

Thu Mar 13 00:12:35 1997  Gary Houston  <ghouston@actrix.gen.nz>

	* backtrace.c (scm_display_error_message): don't segv if message
	is an immediate.
